Revert "#5097: Maywood: Fix image alignment"
This reverts commit 25d7dff2ece5deb13a99ffd544be8bc78025cf14.

--- a/maywood/style.css
+++ b/maywood/style.css
@@ -1700,6 +1700,10 @@ h6, .h6 {
 	line-height: 1.125;
 }
 
+.wp-block-image {
+	text-align: center;
+}
+
 .wp-block-image figcaption {
 	color: #686868;
 	font-size: 0.69444rem;
